--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ python-telegram-bot>=20.0
 python-dotenv>=0.19.0
 openai>=1.0.0
 youtube-transcript-api>=0.6.0
+notion-client>=0.5.0
 logging
+jsonschema>=4.0.0
